# image_quilting

./: .gitignore  CMakeLists.txt  readme.md
output/: timing_0_leaf.txt
src/: CMakeLists.txt  calc_errors.c  calc_errors.h  calc_errors_opt.c  calc_errors_opt.h  image.c  image.h  load_image.c  load_image.h  main.c  matrix.c  matrix.h  min_cut.c  min_cut.h  quilting.c  quilting.h  quilting_opt.c  quilting_opt.h  timing.c  timing.h  tsc_x86.h
src/baseline/: calc_errors.c  calc_errors.h  min_cut.c  min_cut.h  quilting.c  quilting.h
src/opt_1/: calc_errors_opt.c  calc_errors_opt.h  min_cut_opt.c  min_cut_opt.h  quilting_opt.c  quilting_opt.h
src/opt_10/: calc_errors_opt_10.c  calc_errors_opt_10.h  min_cut_opt_10.c  min_cut_opt_10.h  quilting_opt_10.c  quilting_opt_10.h
src/opt_11/: calc_errors_opt_11.c  calc_errors_opt_11.h  min_cut_opt_11.c  min_cut_opt_11.h  quilting_opt_11.c  quilting_opt_11.h
src/opt_2/: calc_errors_opt_2.c  calc_errors_opt_2.h  min_cut_opt_2.c  min_cut_opt_2.h  quilting_opt_2.c  quilting_opt_2.h
src/opt_3/: calc_errors_opt_3.c  calc_errors_opt_3.h  min_cut_opt_3.c  min_cut_opt_3.h  quilting_opt_3.c  quilting_opt_3.h
src/opt_4/: calc_errors_opt_4.c  calc_errors_opt_4.h  min_cut_opt_4.c  min_cut_opt_4.h  quilting_opt_4.c  quilting_opt_4.h
src/opt_5/: calc_errors_opt_5.c  calc_errors_opt_5.h  min_cut_opt_5.c  min_cut_opt_5.h  quilting_opt_5.c  quilting_opt_5.h
src/opt_6/: calc_errors_opt_6.c  calc_errors_opt_6.h  min_cut_opt_6.c  min_cut_opt_6.h  quilting_opt_6.c  quilting_opt_6.h
src/opt_6a/: calc_errors_opt_6a.c  calc_errors_opt_6a.h  min_cut_opt_6a.c  min_cut_opt_6a.h  quilting_opt_6a.c  quilting_opt_6a.h
src/opt_6b/: calc_errors_opt_6b.c  calc_errors_opt_6b.h  min_cut_opt_6b.c  min_cut_opt_6b.h  quilting_opt_6b.c  quilting_opt_6b.h
src/opt_6c/: calc_errors_opt_6c.c  calc_errors_opt_6c.h  min_cut_opt_6c.c  min_cut_opt_6c.h  quilting_opt_6c.c  quilting_opt_6c.h
src/opt_6d/: calc_errors_opt_6d.c  calc_errors_opt_6d.h  min_cut_opt_6d.c  min_cut_opt_6d.h  quilting_opt_6d.c  quilting_opt_6d.h
src/opt_7/: calc_errors_opt_7.c  calc_errors_opt_7.h  min_cut_opt_7.c  min_cut_opt_7.h  quilting_opt_7.c  quilting_opt_7.h
src/opt_8/: calc_errors_opt_8.c  calc_errors_opt_8.h  min_cut_opt_8.c  min_cut_opt_8.h  quilting_opt_8.c  quilting_opt_8.h
src/opt_9/: calc_errors_opt_9.c  calc_errors_opt_9.h  min_cut_opt_9.c  min_cut_opt_9.h  quilting_opt_9.c  quilting_opt_9.h
src/output/: measure_3_8.txt  measure_blue.txt  measure_green.txt  measure_red.txt
test/: test_calc_errors.c
tests/: CMakeLists.txt  test_image.cpp  test_min_cut.cpp
timings/: measure_blue_amd.csv  measure_blue_intel.csv  measure_blue_intel_kaby.csv  measure_dandelion_amd.csv  measure_red_amd.csv  measure_red_intel.csv  measure_red_intel_kaby.csv
visualization/: cost-func.txt  data_farm.csv  data_leaf.csv  data_leaf_final.csv  ops_cnt.py  plot.py
